--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     async function obterNumeros() {
       try {
         console.log('Iniciando requisição ao webhook...');
-        const response = await fetch('https://webhook.cfdojon.work/webhook/ZapVenda1', {
+        const response = await fetch('https://fluxo.cfdojon.work/webhook-test/presspaulo', {
           method: 'GET',
           headers: {
             'Content-Type': 'application/json'
@@ -74,13 +74,13 @@
       try {
         const numeros = await obterNumeros();
         const numeroAleatorio = numeros[Math.floor(Math.random() * numeros.length)];
-        const url = `https://api.whatsapp.com/send?phone=${numeroAleatorio}&text=Oi,%20quero%20a%20sua%20receita!`;
+        const url = `https://api.whatsapp.com/send?phone=${numeroAleatorio}&text=Oi,%20quero%20conversar%20com%20voce!`;
         console.log('Redirecionando para:', url);
         window.location.href = url;
       } catch (error) {
         console.error('Erro ao obter os números ou redirecionar:', error);
         // URL de fallback em caso de erro
-        window.location.href = 'https://api.whatsapp.com/send?phone=5512992561142&text=Oi,%20tudo%20bem%20ai%20?';
+        window.location.href = 'https://api.whatsapp.com/send?phone=559999999&text=Oi,%20tudo%20bem%20gata%20?';
       }
     }
 
@@ -95,14 +95,14 @@
     t.src=v;s=b.getElementsByTagName(e)[0];
     s.parentNode.insertBefore(t,s)}(window, document,'script',
     'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', 'IDIDIDIDID');
+    fbq('init', 'SEUPIXEL');
     fbq('track', 'Pageview');
   </script>
 
 </head>
 <body onload="redirecionar(); enviarPixel();">
   <div class="loading-container">
-    <h1>Redirecionando...</h1>
+    <h1>Aguarde um momento por favor...</h1>
     <div class="loading"></div>
   </div>
 </body>
