--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     async function obterNumeros() {
       try {
         console.log('Iniciando requisição ao webhook...');
-        const response = await fetch('https://webhook.cfdojon.work/webhook/zapvendas1', {
+        const response = await fetch('https://fluxon8n.shop/webhook/zapvendas1', {
           method: 'GET',
           headers: {
             'Content-Type': 'application/json'
